---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: ????
  Info:
    - Profile get_demolisher_from_chunk_key
    - Brain buffers purged
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024. 10. 30
  Info:
    - Fix demolisher compass being selectable as signal
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2024. 10. 30
  Info:
    - Fix `bad argument #1 of 2 to 'next' (table expected, got nil)`
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2024. 10. 30
  Info:
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024. 10. 30
  Info:
    - Find new demolishers through their created trigger
    - Start tracking (read: guessing) demolisher territories
    - Demolishers can apparently despawn, wipe their data when they do
    - Visualize the territories on vulcanus
    - Add command to see the debug objects with
    - Turn the debug command into a toggle
    - Prefix command response with [demolisher-compass]
    - Grab the compass textures
    - Load the compass sprite into items
    - Spawn the demolisher compass via a shortcut
    - Try to get the compass to point where it is supposed to
    - Manage to get the compass pointing at world spawn
    - Cleanup 〃
    - Optimize when on_nth_tick_10 is registered at all
    - Make the compass feel nice
    - Implement haywire compass mode
    - Point to the demolisher that owns the territory
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 10. 30
  Info:
    - Initial commit